--- a/knn.ipynb
+++ b/knn.ipynb
@@ -318,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn = KNeighborsClassifier(n_neighbors=3, algorithm='auto', p=2)"
+    "knn = KNeighborsClassifier(n_neighbors=3, algorithm='auto', p=2, metric='minkowski')"
    ]
   },
   {
